# Family-FIRE

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  ERRORS.md  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  Dockerfile.prod  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  main.py
backend/app/assets/: models.py  relationships.py  router.py  schemas.py  service.py
backend/app/assets/lifecycle/: engine.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/common/: exceptions.py  logging.py  middleware.py  models.py  schemas.py  security.py  seed.py  utils.py
backend/app/documents/: models.py  router.py  schemas.py  service.py
backend/app/families/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/finance/: fire_service.py  models.py  router.py  schemas.py  service.py
backend/app/finance/providers/: price_service.py
backend/app/notifications/: models.py  router.py  service.py  websocket.py
backend/app/tasks/: __init__.py  price_update.py
backend/app/users/: models.py  router.py  schemas.py
backend/scripts/: add_expected_yield.py  clear_assets.py  init_db.py  seed_budget_templates.py
backend/tests/: conftest.py  test_asset_deep.py  test_asset_integration.py  test_assets.py  test_auth.py  test_auth_integration.py  test_docs_notif.py  test_family.py  test_family_integration.py  test_finance.py  test_fire.py  test_health.py  test_integration_deep.py  test_lifecycle.py  test_models.py
docs/: CHINESE_FINANCIAL_APP_REFERENCE.md
downloads/: family-fire-latest.apk
frontend/: README.md  l10n.yaml  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/web/: index.html  manifest.json
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
nginx/: nginx.conf  nginx.prod.conf
scripts/: backup.sh  build_apk.sh  restore.sh  setup.sh  setup_backup.sh
tasks/: task_01_project_init.json  task_02_database_schema.json  task_03_auth_user.json  task_04_family_management.json  task_05_asset_core.json  task_06_asset_lifecycle.json  task_07_finance_tracking.json  task_08_document_management.json  task_09_notifications.json  task_10_fire_engine.json  task_11_flutter_setup.json  task_12_flutter_auth_nav.json  task_13_flutter_assets.json  task_14_flutter_finance.json  task_15_flutter_docs_notif.json  task_16_production_deploy.json
tasks/phase2/: P2_A1_oss_files.json  P2_A2_github_templates.json  P2_A3_deploy_scripts.json  P2_A4_readme.json  (+14 more)
(+121 files in other folders)
