[project]
name = "family-fire"
version = "0.1.0"
description = "Family Fire - 家庭资产管理系统，帮助实现FIRE财务独立"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Family Fire Team"},
]
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache & Message Broker
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # Object Storage
    "minio>=7.2.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Logging
    "structlog>=24.4.0",
    # Validation & Serialization
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Financial Data
    "yfinance>=0.2.50",
    # Image Processing
    "pillow>=11.0.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    
    # Code Quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    
    # Type Stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "RUF001",  # ambiguous unicode characters (Chinese punctuation is intentional)
    "RUF002",  # ambiguous unicode in docstrings (Chinese)
    "UP046",  # Generic class uses Generic subclass (Pydantic requires it)
    "B008",  # FastAPI Depends() in argument defaults is the standard pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
